# agv-system

./: .dockerignore  .gitignore  AGENTS.md  DATA_FLOW_VERIFICATION.md  MIGRATION_GUIDE.md  WEBRTC_TROUBLESHOOTING_ZH.md  env.example  package.json
backend/: Dockerfile  env  env.example  package.json  server.js  simulate_agv.js  start-remote.sh
backend/src/middleware/: request_logger.js  ssh_logger.js
backend/src/routes/: agv_remote_routes.js
backend/src/services/: redis_client.js  ssh_service.js
deployment/: README.md  diagnose-webrtc.sh  fix-mediamtx.sh  mediamtx-fixed.yml  mediamtx-install.sh  nginx.conf  push_stream.sh
frontend/: Dockerfile  env.development  env.example  env.production  index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js  style.css
frontend/src/components/: Agv3DModel.vue
frontend/src/router/: index.js
frontend/src/utils/: defaultAgvConfig.js  xmlHandler.js
frontend/src/views/: AgvConfigurator.vue  AgvMonitor.vue  AgvRemoteManager.vue
rule_engine_cpp/: CMakeLists.txt  Dockerfile
rule_engine_cpp/src/: main.cc  redis_client.cc  redis_client.h  rule_engine.cc  rule_engine.h
